bitfield/tests/09-variant-out-of-range.stderr
error[E0277]: the trait bound `False: DiscriminantInRange` is not satisfied
  --> tests/09-variant-out-of-range.rs:17:5
   |
17 |     External,
   |     ^^^^^^^^ the trait `DiscriminantInRange` is not implemented for `False`
   |
   = help: the trait `DiscriminantInRange` is implemented for `True`
